fix: correct link text color on mobile

--- a/my-portfolio/src/components/navbar.css
+++ b/my-portfolio/src/components/navbar.css
@@ -18,6 +18,8 @@
     font-weight: 500;
     font-size: 17px;
     cursor: pointer;
+    font-family: 'Acme', sans-serif;
+    color: black;
 }
 .list {
     list-style-type: none;
